--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.0.1",
         "express": "4.17.1",
         "joi": "^17.6.0",
+        "mongodb": "^2.2.16",
         "mongoose": "^6.4.3",
         "morgan": "1.10.0"
     },
